--- a/hpc_ai/PINN/English/python/jupyter_notebook/diffusion_1d/Diffusion_Problem_Notebook.ipynb
+++ b/hpc_ai/PINN/English/python/jupyter_notebook/diffusion_1d/Diffusion_Problem_Notebook.ipynb
@@ -26,11 +26,11 @@
         "pip install nvidia-modulus nvidia-modulus-launch nvidia-modulus-sym"
       ],
       "metadata": {
-        "id": "9lsdjISru-Pd",
-        "outputId": "216892e6-6925-4dc3-bf9f-57a540b46903",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9lsdjISru-Pd",
+        "outputId": "216892e6-6925-4dc3-bf9f-57a540b46903"
       },
       "execution_count": 1,
       "outputs": [
@@ -1123,7 +1123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "v-JlBTASuRIA"
       },
@@ -1137,11 +1137,75 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "%%bash\n",
+        "git clone https://github.com/robertopsouto/gpubootcamp.git\n",
+        "#cd gpubootcamp/hpc_ai/PINN/English/python/jupyter_notebook/diffusion_1d"
+      ],
       "metadata": {
-        "id": "vn-7uB2WuRID"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xT9O28-Rxbkv",
+        "outputId": "785d19d4-dc77-40e3-f624-009aabd3f053"
       },
-      "outputs": [],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Cloning into 'gpubootcamp'...\n",
+            "Updating files:  93% (1704/1823)\rUpdating files:  94% (1714/1823)\rUpdating files:  95% (1732/1823)\rUpdating files:  96% (1751/1823)\rUpdating files:  97% (1769/1823)\rUpdating files:  98% (1787/1823)\rUpdating files:  99% (1805/1823)\rUpdating files: 100% (1823/1823)\rUpdating files: 100% (1823/1823), done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd gpubootcamp/hpc_ai/PINN/English/python/jupyter_notebook/diffusion_1d"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LDaOMcCxygBz",
+        "outputId": "369390fa-2f2b-4021-8579-3d3d02bb1f19"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/gpubootcamp/hpc_ai/PINN/English/python/jupyter_notebook/diffusion_1d\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vn-7uB2WuRID",
+        "outputId": "c977f064-2203-42e6-cf9f-a3a75a4dff74"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Traceback (most recent call last):\n",
+            "  File \"/content/gpubootcamp/hpc_ai/PINN/English/python/jupyter_notebook/diffusion_1d/../../source_code/diffusion_1d/diffusion_bar.py\", line 6, in <module>\n",
+            "    from modulus.hydra import instantiate_arch , ModulusConfig\n",
+            "ModuleNotFoundError: No module named 'modulus.hydra'\n"
+          ]
+        }
+      ],
       "source": [
         "!python3 ../../source_code/diffusion_1d/diffusion_bar.py"
       ]
@@ -1163,11 +1227,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
-        "id": "4snqzK0HuRIE"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 367
+        },
+        "id": "4snqzK0HuRIE",
+        "outputId": "13d26f5e-0da9-4cdb-a3fa-57a33d4bf363"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-8-1859cc8bd164>\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mnetwork_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"./outputs/diffusion_bar/validators/\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mdata_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnetwork_dir\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"Val1.npz\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_pickle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mdata_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnetwork_dir\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"Val2.npz\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_pickle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mdata_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0matleast_1d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marr_0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding, max_header_size)\u001b[0m\n\u001b[1;32m    403\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    404\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 405\u001b[0;31m             \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menter_context\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos_fspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    406\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    407\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './outputs/diffusion_bar/validators/Val1.npz'"
+          ]
+        }
+      ],
       "source": [
         "%%capture\n",
         "import sys\n",
