--- a/hpc_ai/PINN/English/python/jupyter_notebook/diffusion_1d/Diffusion_Problem_Notebook.ipynb
+++ b/hpc_ai/PINN/English/python/jupyter_notebook/diffusion_1d/Diffusion_Problem_Notebook.ipynb
@@ -27,116 +27,10 @@
         "pip install nvidia-modulus"
       ],
       "metadata": {
-        "id": "9jR3TOnGfWDj",
-        "outputId": "2f7ffbf5-1f11-4c67-b508-3ebace171afd",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "9jR3TOnGfWDj"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting nvidia-modulus\n",
-            "  Downloading nvidia_modulus-0.3.0-py3-none-any.whl (290 kB)\n",
-            "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 290.9/290.9 kB 5.9 MB/s eta 0:00:00\n",
-            "Requirement already satisfied: torch>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from nvidia-modulus) (2.0.1+cu118)\n",
-            "Requirement already satisfied: numpy<1.25,>=1.22.4 in /usr/local/lib/python3.10/dist-packages (from nvidia-modulus) (1.23.5)\n",
-            "Requirement already satisfied: xarray>=2023.1.0 in /usr/local/lib/python3.10/dist-packages (from nvidia-modulus) (2023.7.0)\n",
-            "Collecting zarr>=2.14.2 (from nvidia-modulus)\n",
-            "  Downloading zarr-2.16.1-py3-none-any.whl (206 kB)\n",
-            "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 206.9/206.9 kB 8.8 MB/s eta 0:00:00\n",
-            "Requirement already satisfied: fsspec>=2023.1.0 in /usr/local/lib/python3.10/dist-packages (from nvidia-modulus) (2023.6.0)\n",
-            "Collecting s3fs>=2023.5.0 (from nvidia-modulus)\n",
-            "  Downloading s3fs-2023.9.2-py3-none-any.whl (28 kB)\n",
-            "Collecting nvidia-dali-cuda110>=1.16.0 (from nvidia-modulus)\n",
-            "  Downloading nvidia_dali_cuda110-1.30.0-9783405-py3-none-manylinux2014_x86_64.whl (493.6 MB)\n",
-            "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 493.6/493.6 MB 3.3 MB/s eta 0:00:00\n",
-            "Requirement already satisfied: setuptools>=67.6.0 in /usr/local/lib/python3.10/dist-packages (from nvidia-modulus) (67.7.2)\n",
-            "Requirement already satisfied: certifi>=2023.7.22 in /usr/local/lib/python3.10/dist-packages (from nvidia-modulus) (2023.7.22)\n",
-            "Requirement already satisfied: astunparse>=1.6.0 in /usr/local/lib/python3.10/dist-packages (from nvidia-dali-cuda110>=1.16.0->nvidia-modulus) (1.6.3)\n",
-            "Requirement already satisfied: gast>=0.3.3 in /usr/local/lib/python3.10/dist-packages (from nvidia-dali-cuda110>=1.16.0->nvidia-modulus) (0.4.0)\n",
-            "Requirement already satisfied: dm-tree in /usr/local/lib/python3.10/dist-packages (from nvidia-dali-cuda110>=1.16.0->nvidia-modulus) (0.1.8)\n",
-            "Collecting aiobotocore~=2.5.4 (from s3fs>=2023.5.0->nvidia-modulus)\n",
-            "  Downloading aiobotocore-2.5.4-py3-none-any.whl (73 kB)\n",
-            "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 73.4/73.4 kB 9.3 MB/s eta 0:00:00\n",
-            "Collecting fsspec>=2023.1.0 (from nvidia-modulus)\n",
-            "  Downloading fsspec-2023.9.2-py3-none-any.whl (173 kB)\n",
-            "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 173.4/173.4 kB 19.6 MB/s eta 0:00:00\n",
-            "Requirement already satisfied: aiohttp!=4.0.0a0,!=4.0.0a1 in /usr/local/lib/python3.10/dist-packages (from s3fs>=2023.5.0->nvidia-modulus) (3.8.6)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from torch>=2.0.0->nvidia-modulus) (3.12.4)\n",
-            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.10/dist-packages (from torch>=2.0.0->nvidia-modulus) (4.5.0)\n",
-            "Requirement already satisfied: sympy in /usr/local/lib/python3.10/dist-packages (from torch>=2.0.0->nvidia-modulus) (1.12)\n",
-            "Requirement already satisfied: networkx in /usr/local/lib/python3.10/dist-packages (from torch>=2.0.0->nvidia-modulus) (3.1)\n",
-            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.10/dist-packages (from torch>=2.0.0->nvidia-modulus) (3.1.2)\n",
-            "Requirement already satisfied: triton==2.0.0 in /usr/local/lib/python3.10/dist-packages (from torch>=2.0.0->nvidia-modulus) (2.0.0)\n",
-            "Requirement already satisfied: cmake in /usr/local/lib/python3.10/dist-packages (from triton==2.0.0->torch>=2.0.0->nvidia-modulus) (3.27.6)\n",
-            "Requirement already satisfied: lit in /usr/local/lib/python3.10/dist-packages (from triton==2.0.0->torch>=2.0.0->nvidia-modulus) (17.0.2)\n",
-            "Requirement already satisfied: pandas>=1.4 in /usr/local/lib/python3.10/dist-packages (from xarray>=2023.1.0->nvidia-modulus) (1.5.3)\n",
-            "Requirement already satisfied: packaging>=21.3 in /usr/local/lib/python3.10/dist-packages (from xarray>=2023.1.0->nvidia-modulus) (23.2)\n",
-            "Collecting asciitree (from zarr>=2.14.2->nvidia-modulus)\n",
-            "  Downloading asciitree-0.3.3.tar.gz (4.0 kB)\n",
-            "  Preparing metadata (setup.py): started\n",
-            "  Preparing metadata (setup.py): finished with status 'done'\n",
-            "Collecting fasteners (from zarr>=2.14.2->nvidia-modulus)\n",
-            "  Downloading fasteners-0.19-py3-none-any.whl (18 kB)\n",
-            "Collecting numcodecs>=0.10.0 (from zarr>=2.14.2->nvidia-modulus)\n",
-            "  Downloading numcodecs-0.12.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (7.7 MB)\n",
-            "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 7.7/7.7 MB 78.6 MB/s eta 0:00:00\n",
-            "Collecting botocore<1.31.18,>=1.31.17 (from aiobotocore~=2.5.4->s3fs>=2023.5.0->nvidia-modulus)\n",
-            "  Downloading botocore-1.31.17-py3-none-any.whl (11.1 MB)\n",
-            "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 11.1/11.1 MB 76.3 MB/s eta 0:00:00\n",
-            "Requirement already satisfied: wrapt<2.0.0,>=1.10.10 in /usr/local/lib/python3.10/dist-packages (from aiobotocore~=2.5.4->s3fs>=2023.5.0->nvidia-modulus) (1.15.0)\n",
-            "Collecting aioitertools<1.0.0,>=0.5.1 (from aiobotocore~=2.5.4->s3fs>=2023.5.0->nvidia-modulus)\n",
-            "  Downloading aioitertools-0.11.0-py3-none-any.whl (23 kB)\n",
-            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->s3fs>=2023.5.0->nvidia-modulus) (23.1.0)\n",
-            "Requirement already satisfied: charset-normalizer<4.0,>=2.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->s3fs>=2023.5.0->nvidia-modulus) (3.3.0)\n",
-            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.10/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->s3fs>=2023.5.0->nvidia-modulus) (6.0.4)\n",
-            "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in /usr/local/lib/python3.10/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->s3fs>=2023.5.0->nvidia-modulus) (4.0.3)\n",
-            "Requirement already satisfied: yarl<2.0,>=1.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->s3fs>=2023.5.0->nvidia-modulus) (1.9.2)\n",
-            "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->s3fs>=2023.5.0->nvidia-modulus) (1.4.0)\n",
-            "Requirement already satisfied: aiosignal>=1.1.2 in /usr/local/lib/python3.10/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->s3fs>=2023.5.0->nvidia-modulus) (1.3.1)\n",
-            "Requirement already satisfied: wheel<1.0,>=0.23.0 in /usr/local/lib/python3.10/dist-packages (from astunparse>=1.6.0->nvidia-dali-cuda110>=1.16.0->nvidia-modulus) (0.41.2)\n",
-            "Requirement already satisfied: six<2.0,>=1.6.1 in /usr/local/lib/python3.10/dist-packages (from astunparse>=1.6.0->nvidia-dali-cuda110>=1.16.0->nvidia-modulus) (1.16.0)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.10/dist-packages (from pandas>=1.4->xarray>=2023.1.0->nvidia-modulus) (2.8.2)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas>=1.4->xarray>=2023.1.0->nvidia-modulus) (2023.3.post1)\n",
-            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from jinja2->torch>=2.0.0->nvidia-modulus) (2.1.3)\n",
-            "Requirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.10/dist-packages (from sympy->torch>=2.0.0->nvidia-modulus) (1.3.0)\n",
-            "Collecting jmespath<2.0.0,>=0.7.1 (from botocore<1.31.18,>=1.31.17->aiobotocore~=2.5.4->s3fs>=2023.5.0->nvidia-modulus)\n",
-            "  Downloading jmespath-1.0.1-py3-none-any.whl (20 kB)\n",
-            "Collecting urllib3<1.27,>=1.25.4 (from botocore<1.31.18,>=1.31.17->aiobotocore~=2.5.4->s3fs>=2023.5.0->nvidia-modulus)\n",
-            "  Downloading urllib3-1.26.17-py2.py3-none-any.whl (143 kB)\n",
-            "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 143.4/143.4 kB 16.5 MB/s eta 0:00:00\n",
-            "Requirement already satisfied: idna>=2.0 in /usr/local/lib/python3.10/dist-packages (from yarl<2.0,>=1.0->aiohttp!=4.0.0a0,!=4.0.0a1->s3fs>=2023.5.0->nvidia-modulus) (3.4)\n",
-            "Building wheels for collected packages: asciitree\n",
-            "  Building wheel for asciitree (setup.py): started\n",
-            "  Building wheel for asciitree (setup.py): finished with status 'done'\n",
-            "  Created wheel for asciitree: filename=asciitree-0.3.3-py3-none-any.whl size=5034 sha256=41969c8d1e7197cd621155dd22b41a1be99f16fe0753966670259feb0250c572\n",
-            "  Stored in directory: /root/.cache/pip/wheels/7f/4e/be/1171b40f43b918087657ec57cf3b81fa1a2e027d8755baa184\n",
-            "Successfully built asciitree\n",
-            "Installing collected packages: asciitree, urllib3, numcodecs, jmespath, fsspec, fasteners, aioitertools, zarr, nvidia-dali-cuda110, botocore, aiobotocore, s3fs, nvidia-modulus\n",
-            "  Attempting uninstall: urllib3\n",
-            "    Found existing installation: urllib3 2.0.6\n",
-            "    Uninstalling urllib3-2.0.6:\n",
-            "      Successfully uninstalled urllib3-2.0.6\n",
-            "  Attempting uninstall: fsspec\n",
-            "    Found existing installation: fsspec 2023.6.0\n",
-            "    Uninstalling fsspec-2023.6.0:\n",
-            "      Successfully uninstalled fsspec-2023.6.0\n",
-            "Successfully installed aiobotocore-2.5.4 aioitertools-0.11.0 asciitree-0.3.3 botocore-1.31.17 fasteners-0.19 fsspec-2023.9.2 jmespath-1.0.1 numcodecs-0.12.0 nvidia-dali-cuda110-1.30.0 nvidia-modulus-0.3.0 s3fs-2023.9.2 urllib3-1.26.17 zarr-2.16.1\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "ERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "gcsfs 2023.6.0 requires fsspec==2023.6.0, but you have fsspec 2023.9.2 which is incompatible.\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -149,25 +43,24 @@
         "output.shape"
       ],
       "metadata": {
-        "id": "2XIDGhB3nHlz",
-        "outputId": "99dba1c5-e4a8-4f85-be5f-2f2d4296ee69",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "2XIDGhB3nHlz"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "torch.Size([128, 64])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 3
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%bash\n",
+        "# https://forums.developer.nvidia.com/t/error-when-running-modulus/215456\n",
+        "#pip install hydra-core==1.1.1\n",
+        "pip install hydra-core"
+      ],
+      "metadata": {
+        "id": "5R2fUmbXsU0C"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
